[project]
name = "securecrtscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "notebook>=7.4.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
